[gd_scene load_steps=4 format=3 uid="uid://bb8xhf4j3fkbf"]

[ext_resource type="Script" path="res://Scripts/UI/power_up_spine.gd" id="1_spine"]
[ext_resource type="Texture2D" uid="uid://bda0jgw1sbmsv" path="res://Resources/Art/Powerups/powerup_spine.png" id="2_spine_tex"]
[ext_resource type="Theme" uid="uid://yij15afv8bdr" path="res://Resources/UI/scorecard_theme.tres" id="3_8wavh"]

[node name="PowerUpSpine" type="Control"]
custom_minimum_size = Vector2(16, 92)
layout_mode = 3
anchor_top = -0.053
anchor_right = 0.023
anchor_bottom = 0.075
offset_top = 0.176003
offset_right = 0.559998
offset_bottom = 0.015995
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_spine")
spine_texture = ExtResource("2_spine_tex")

[node name="SpineRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_spine_tex")
stretch_mode = 3

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.293
offset_bottom = 0.0439987
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_8wavh")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
